# pico-playground

./: .gitattributes  .gitignore  Cargo.toml  README.md
big-life/: Cargo.toml
big-life/src/: main.rs
image-tools/: Cargo.toml  run.sh  watch.sh
image-tools/src/: codec.rs  decoder.rs  encoder.rs  lib.rs  main.rs
image-tools/tests/: round_trip_v1.rs
lib-pico-life/: Cargo.toml
lib-pico-life/src/: lib.rs
life/: Cargo.toml
life/src/: lib.rs
pico/: Cargo.toml  bad-apple.video  build.rs  check.sh  deny.toml  memory.x
pico-life/: Cargo.toml  build.rs
pico-life/.cargo/: config.toml
pico-life/src/: main.rs
pico/.cargo/: config.toml
pico/scripts/: ci_checks.sh  sizes.sh  watch.sh
pico/src/: image.rs  lcd.rs  lib.rs  main.rs  oled.rs  pico.rs  scene.rs
pico/src/peripherals/: ina219.rs  mod.rs  sh1107.rs  st7789.rs  tmp36.rs
pico/src/scene/: bad_apple.rs  bitflipper.rs  conway.rs  credits.rs  debug_text.rs  mod.rs
runner/: Cargo.toml
runner/src/: bitflipper.rs  elem.rs  life.rs
src/: lib.rs  main.rs
