[package]
name = "image-tools"
version = "0.1.0"
edition = "2021"

[features]
default = ["encoder", "decoder", "std"]
encoder = ["std"]
decoder = []
std = []

[dependencies]
bytemuck = { version = "1", features = ["min_const_generics", "track_caller"] }
clap = { version = "4.5", features = ["derive"] }
image = "0.25"
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1"
regex = "1"
simulations = { version = "0.1.0", path = "../simulations" }

# Enable full optimizations on debug builds of dependencies.
# We rarely step through them.
[profile.dev.package."*"]
opt-level = 2
