[package]
name = "pico"
version = "0.1.0"
edition = "2021"
default-run = "pico-oled"

[[bin]]
name = "pico-lcd"
path = "src/bin/pico-lcd.rs"
test = false
bench = false

[[bin]]
name = "pico-oled"
path = "src/bin/pico-oled.rs"
test = false
bench = false

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
defmt-rtt = "0.4"
rp-pico = "0.9"

[dependencies]
# Embedded Things
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
embedded-alloc = "0.6"
embedded-graphics = "0.8"
embedded-hal = "1"
embedded-hal-bus = "0.3"
fugit = "0.3"
panic-persist = { version = "0.3", features = ["utf8"] }
panic-probe = "0.3"

# Local deps
simulations = { path = "../simulations", default-features = false }
rand = { version = "0.8", features = ["small_rng"], default-features = false }

# Everything else
bytemuck = { version = "1.21", features = ["derive", "min_const_generics"] }
proc-bitfield = "0.5"
indoc = "2"


[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.24"

# Enable full optimizations on debug builds of dependencies.
# We rarely step through them.
[profile.dev.package."*"]
opt-level = "z"

# Enable minimal optimizations for our debug code.
[profile.dev]
opt-level = 1
