[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "life"
path = "src/life.rs"

[[bin]]
name = "elem"
path = "src/elem.rs"


[[bin]]
name = "bitflipper"
path = "src/bitflipper.rs"

[dependencies]
simulations = { path = "../simulations" }

minifb = "0.28"
rand = { version = "0.9", features = ["small_rng"], default-features = false }
