[package]
name = "runner"
version = "0.1.0"
edition = "2021"
default-run = "bitflipper"

[[bin]]
name = "life"
path = "src/life.rs"

[[bin]]
name = "elem"
path = "src/elem.rs"


[[bin]]
name = "bitflipper"
path = "src/bitflipper.rs"

[dependencies]
simulations = { path = "../simulations" }

minifb = "0.28"
rand = "0.9"
